Closed Bug 1544745 Opened 6 years ago Closed 5 years ago

Some fixes for HttpTransactionParent and BackgroundImpl

Categories

(Core :: Networking: HTTP, defect, P2)

68 Branch
defect

Tracking

()

RESOLVED FIXED
Tracking Status
firefox68 --- affected

People

(Reporter: dragana, Assigned: dragana)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 obsolete file)

No description provided.
Blocks: socket-proc

There's a r+ patch which didn't land and no activity in this bug for 2 weeks.
:dragana, could you have a look please?
For more information, please visit auto_nag documentation.

Flags: needinfo?(dd.mozilla)

This is part of the socket process project that will land on a separate branch(larch).

Flags: needinfo?(dd.mozilla)
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Attachment #9058546 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: