Bug 1544745 - HttpTransactionParent channel may not be open. r=kershaw